Structure, comments and readme

--- a/Collaborative Filtering Recommender System.ipynb
+++ b/Collaborative Filtering Recommender System.ipynb
@@ -480,8 +480,6 @@
     }
    ],
    "source": [
-    "#Let's normalize the matrix\n",
-    "#playlist_similarities = playlist_similarities.multiply(1000/playlist_similarities.max())\n",
     "print(playlist_similarities.shape)\n",
     "\n",
     "#(23619, 23619)"
@@ -502,9 +500,8 @@
     }
    ],
    "source": [
-    "#Here we can get the similarities between two playlists.   \n",
-    "print(np.asarray(playlist_similarities.getrow(50).todense())[0][100])\n",
-    "print(np.asarray(playlist_similarities.getrow(100).todense())[0][50])"
+    "#This way we can get the similarities between two playlists.   \n",
+    "print(np.asarray(playlist_similarities.getrow(50).todense())[0][100])\n"
    ]
   },
   {
@@ -515,7 +512,8 @@
    },
    "outputs": [],
    "source": [
-    "def playlist_similarity(playlist_id1, playlist_id2):    \n",
+    "def playlist_similarity(playlist_id1, playlist_id2):   \n",
+    "    #Takes two playlist ids, returns their similarity as integer.\n",
     "    similarity = np.asarray(playlist_similarities.getrow(playlist_indexes[playlist_id1]).todense())[0][playlist_indexes[playlist_id2]]\n",
     "    return similarity"
    ]
@@ -540,17 +538,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "first part:  0.9999891567954919\n",
-      "Second part:  1.0843204508053483e-05\n",
       "[[2158207 2609171 4733003 3796108 2730084]]\n"
      ]
     }
@@ -562,7 +558,7 @@
     "    import time\n",
     "    \n",
     "    #How many tracks do we want to work with? \n",
-    "    tracks = popularity.sort_values(by='occurrences', ascending=False)[:50]\n",
+    "    tracks = popularity.sort_values(by='occurrences', ascending=False)[:25]\n",
     "    #remove index name\n",
     "    tracks.reset_index(level = 0, inplace = True)\n",
     "    #Rename the columns\n",
@@ -598,8 +594,6 @@
     "        relevance[track_counter] = sum/track[2]  #Normalize. track[2] is the number of playlists containing the song. \n",
     "        track_counter += 1\n",
     "    \n",
-    "    timeb = time.time()\n",
-    "\n",
     "        #relevance = sum/num of playlists containing the song\n",
     "    found = 0\n",
     "    while found < 5: \n",
@@ -608,16 +602,10 @@
     "        recommendations[0, found] = tracks[maxindex, 1]\n",
     "        relevance[maxindex] *= -1\n",
     "        found += 1\n",
-    "        \n",
-    "    timec = time.time()\n",
-    "    total = timec-timea\n",
-    "    first = (timeb-timea)/total\n",
-    "    second = (timec-timeb)/total\n",
+    "    \n",
     "    #print(tracks)\n",
     "    #print(relevance)\n",
     "    \n",
-    "    print(\"first part: \", first)\n",
-    "    print(\"Second part: \",second)\n",
     "    return recommendations\n",
     "print(recommend(10024884))\n"
    ]
@@ -632,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +632,8 @@
       "3     4267369\n",
       "4       65078\n",
       "Name: playlist_id, dtype: int64\n",
-      "Ten recommendations took  19.052486896514893  seconds. 10000 would take  5.292357471254137  hours... \n"
+      "3.218650817871094e-05 since start\n",
+      "0.0003540515899658203 since start time.  10000  playlists to go. Progress:  0.0\n"
      ]
     }
    ],
@@ -667,9 +656,11 @@
     "\n",
     "import time\n",
     "starttime = time.time()\n",
-    "\n",
+    "print(time.time()-starttime, \"since start\")\n",
     "#Fill the recommendations matrix through calling the recommend-function\n",
     "counter = 0; \n",
+    "print(time.time()-starttime, \"since start time. \",10000-counter,\" playlists to go. Progress: \", counter/10000)\n",
+    "\n",
     "for playlist_id in target_playlists[1:10]['playlist_id']:\n",
     "    #Add the playlist ids as first col\n",
     "    recommendations.iloc[counter, 0] = playlist_id\n",
@@ -677,13 +668,15 @@
     "    #Fill the recommendations to col 1-5 for each playlist\n",
     "    recommendations.iloc[counter, 1:6] = recommend(playlist_id)\n",
     "    counter += 1\n",
+    "    if counter%1000 == 0: \n",
+    "        print(time.time()-starttime , \"since start time. \",10000-counter,\" playlists to go. Progress: \" + (counter/10000))\n",
     "\n",
     "#print(recommendations)\n",
     "runtime = time.time()-starttime\n",
     "\n",
     "hours = 1000*runtime/3600\n",
     "\n",
-    "print(\"Ten recommendations took \",runtime,\" seconds. 10000 would take \", hours, \" hours... \")\n",
+    "#print(\"Ten recommendations took \",runtime,\" seconds. 10000 would take \", hours, \" hours... \")\n",
     "\n",
     "def save_to_file():\n",
     "    #Saves the recommendations dataframe to the .csv-file. \n",
