--- a/Collaborative Filtering Recommender System.ipynb
+++ b/Collaborative Filtering Recommender System.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "4      3836898   2945623"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "(41756, 2)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,8 +186,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -224,18 +226,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#Should probably be called PIM (or perhaps URM) instead, for clarity. \n",
+    "#Should also be sparse matrix from the start. Instantiate like in the content based!  \n",
+    "\n",
     "item_playlist_matrix = np.zeros([playlists_relevant.shape[0], tracks_relevant.shape[0]],int) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +258,7 @@
        "986193208"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -270,6 +284,8 @@
     }
    ],
    "source": [
+    "#Here we should probably not use the id in [0]-approach. \n",
+    "\n",
     "#If we translate each track_id to a track_index which will serve as matrix index, we can save a lot of time. \n",
     "#Same goes for playlist_id --> playlist_index. \n",
     "\n",
@@ -303,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -368,14 +384,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(23617, 41755)\n",
+      "(23618, 41756)\n",
       "tje2\n"
      ]
     }
@@ -383,17 +399,38 @@
    "source": [
     "#Now we have a item_playlist_matrix! Nice. lets save. \n",
     "\n",
-    "sparse_matrix = sps.csr_matrix(item_playlist_matrix[1:,1:])\n",
+    "#really poor variable name\n",
+    "#sparse_matrix = sps.csr_matrix(item_playlist_matrix[1:,1:])\n",
     "\n",
-    "#sps.save_npz(\"sparse_item_playlist\", sparse_matrix)\n",
+    "#Instead of doing it this way, we should probably build it at a sparse matrix from scratch to avoid zeros.\n",
     "\n",
-    "print(sparse_matrix.shape)\n",
+    "#Create train mask\n",
+    "train_test_split = 0.80\n",
+    "numInteractions = train_relevant.shape[0]\n",
+    "train_mask = np.random.choice([True,False], numInteractions, [train_test_split, 1-train_test_split])\n",
+    "\n",
+    "playlistList = train_relevant['playlist_id'].values\n",
+    "itemList = train_relevant['track_id'].values\n",
+    "\n",
+    "#Translate ids\n",
+    "ratingList = np.ones((playlistList.shape), int)\n",
+    "playlistList_translated = np.zeros(playlistList.shape)\n",
+    "itemList_translated = np.zeros(itemList.shape)\n",
+    "for i in range(train_relevant.shape[0]):\n",
+    "    playlistList_translated[i] = playlist_indexes[playlistList[i]]\n",
+    "    itemList_translated[i] = track_indexes[itemList[i]]\n",
+    "\n",
+    "#Build URM\n",
+    "URM_train = sps.coo_matrix((ratingList[train_mask], (playlistList_translated[train_mask], itemList_translated[train_mask])))\n",
+    "URM_train = URM_train.tocsr()\n",
+    "\n",
+    "print(URM_train.shape)\n",
     "print(\"tje2\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 96,
    "metadata": {
     "scrolled": false
    },
@@ -402,54 +439,188 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(23617, 23617)\n",
+      "6839540\n",
+      "True\n",
       "lgt2\n"
      ]
     }
    ],
    "source": [
-    "#If we multiply the matrix with its transposition, we will get an item similarity matrix. \n",
+    "#If we multiply the matrix with its transposition, we will get an item similarity matrix.\n",
+    "#Saving only the top 50 similar matrixes saves a factor of 20. \n",
+    "playlist_similarities = URM_train.dot(URM_train.transpose())\n",
+    "print(playlist_similarities.nnz) #22039674\n",
+    "print(sps.issparse(playlist_similarities))\n",
     "\n",
-    "playlist_similarities = sparse_matrix.dot(sparse_matrix.transpose())\n",
-    "print(playlist_similarities.shape)\n",
+    "#playlist_similarities = playlist_similarities[playlist_similarities>0.5]\n",
+    "#print(sps.issparse(playlist_similarities))\n",
+    "\n",
+    "#print(playlist_similarities[0:5])\n",
+    "\n",
+    "\n",
     "print(\"lgt2\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(23617, 23617)\n"
+      "[[ 9  2  7 ...,  2  2 41]]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 0 out of 23618\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/philipclaesson/anaconda3/lib/python3.6/site-packages/scipy/sparse/compressed.py:774: SparseEfficiencyWarning: Changing the sparsity structure of a csr_matrix is expensive. lil_matrix is more efficient.\n",
+      "  SparseEfficiencyWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 500 out of 23618\n",
+      "Row 1000 out of 23618\n",
+      "Row 1500 out of 23618\n",
+      "Row 2000 out of 23618\n",
+      "Row 2500 out of 23618\n",
+      "Row 3000 out of 23618\n",
+      "Row 3500 out of 23618\n",
+      "Row 4000 out of 23618\n",
+      "Row 4500 out of 23618\n",
+      "Row 5000 out of 23618\n",
+      "Row 5500 out of 23618\n",
+      "Row 6000 out of 23618\n",
+      "Row 6500 out of 23618\n",
+      "Row 7000 out of 23618\n",
+      "Row 7500 out of 23618\n",
+      "Row 8000 out of 23618\n",
+      "Row 8500 out of 23618\n",
+      "Row 9000 out of 23618\n",
+      "Row 9500 out of 23618\n",
+      "Row 10000 out of 23618\n",
+      "Row 10500 out of 23618\n",
+      "Row 11000 out of 23618\n",
+      "Row 11500 out of 23618\n",
+      "Row 12000 out of 23618\n",
+      "Row 12500 out of 23618\n",
+      "Row 13000 out of 23618\n",
+      "Row 13500 out of 23618\n",
+      "Row 14000 out of 23618\n",
+      "Row 14500 out of 23618\n",
+      "Row 15000 out of 23618\n",
+      "Row 15500 out of 23618\n",
+      "Row 16000 out of 23618\n",
+      "Row 16500 out of 23618\n",
+      "Row 17000 out of 23618\n",
+      "Row 17500 out of 23618\n",
+      "Row 18000 out of 23618\n",
+      "Row 18500 out of 23618\n",
+      "Row 19000 out of 23618\n",
+      "Row 19500 out of 23618\n",
+      "Row 20000 out of 23618\n",
+      "Row 20500 out of 23618\n",
+      "Row 21000 out of 23618\n",
+      "Row 21500 out of 23618\n",
+      "Row 22000 out of 23618\n",
+      "Row 22500 out of 23618\n",
+      "Row 23000 out of 23618\n",
+      "Row 23500 out of 23618\n"
      ]
     }
    ],
    "source": [
-    "print(playlist_similarities.shape)\n",
-    "\n",
-    "#(23619, 23619)"
+    "#Create user similarity matrix\n",
+    "USM = keep_top_similar(playlist_similarities, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "True\n",
+      "6886502\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sps.issparse(USM))\n",
+    "print(USM.nnz)\n",
+    "sps.save_npz('USM_collaborative_filtering', USM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def keep_top_similar(playlist_similarities, k):\n",
+    "    #Assuming playlist_similarities is in coo format. \n",
+    "    for i in range(playlist_similarities.shape[0]): #O(p)\n",
+    "        if i%500 == 0:\n",
+    "            print(\"Row %s out of %s\" %(i, playlist_similarities.shape[0]))\n",
+    "        threshold = get_threshold(playlist_similarities[i], k)\n",
+    "        for j in range(row.shape[0]):\n",
+    "            if playlist_similarities[i,j] <= threshold: \n",
+    "                playlist_similarities[i,j] = 0 \n",
+    "    return playlist_similarities\n",
+    "\n",
+    "def get_threshold(row, k):   #O(p)     \n",
+    "    for i in range(row.shape[0]): \n",
+    "        #put all vals in array\n",
+    "        values = row.toarray()\n",
+    "        values.sort()\n",
+    "        threshold = 1 + values[0][row.shape[1]-k]\n",
+    "        return threshold\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'matrix' object has no attribute 'getrow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-48-74c8d1e3bd99>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#This way we can get the similarities between two playlists.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplaylist_similarities\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetrow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtodense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'matrix' object has no attribute 'getrow'"
      ]
     }
    ],
    "source": [
     "#This way we can get the similarities between two playlists.   \n",
-    "print(np.asarray(playlist_similarities.getrow(50).todense())[0][100])\n"
+    "print(np.asarray(USM.getrow(50).todense())[0][100])\n"
    ]
   },
   {
@@ -527,7 +698,6 @@
     "    \n",
     "    track_counter = 0\n",
     "    \n",
-    "    #\n",
     "    \n",
     "    for track in tracks:\n",
     "        sum = 0\n",
