--- a/Content Based Recommender System-old.ipynb
+++ b/Content Based Recommender System-old.ipynb
@@ -33,16 +33,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 0)\t0.987736120245\n",
+      "  (0, 1)\t0.301233932795\n",
+      "  (0, 2)\t0.517064506999\n",
+      "  (0, 3)\t0.465257889916\n",
+      "  (0, 4)\t0.740831829005\n",
+      "  (1, 0)\t0.710282057942\n",
+      "  (1, 1)\t0.949695379849\n",
+      "  (1, 2)\t0.137802158427\n",
+      "  (1, 3)\t0.739335590541\n",
+      "  (1, 4)\t0.950231292294\n",
+      "  (0, 4)\t0.301233932795\n",
+      "  (0, 2)\t0.301233932795\n",
+      "  (0, 3)\t0.987736120245\n",
+      "  (0, 1)\t0.987736120245\n",
+      "  (0, 0)\t0.987736120245\n",
+      "  (1, 4)\t0.949695379849\n",
+      "  (1, 2)\t0.949695379849\n",
+      "  (1, 3)\t0.710282057942\n",
+      "  (1, 1)\t0.710282057942\n",
+      "  (1, 0)\t0.710282057942\n",
+      "10\n",
+      "  (0, 0)\t0.987736120245\n",
+      "  (0, 1)\t0.301233932795\n",
+      "  (0, 2)\t0.517064506999\n",
+      "  (0, 3)\t0.465257889916\n",
+      "  (0, 4)\t0.740831829005\n",
+      "  (1, 0)\t0.710282057942\n",
+      "  (1, 1)\t0.949695379849\n",
+      "  (1, 2)\t0.137802158427\n",
+      "  (1, 3)\t0.739335590541\n",
+      "  (1, 4)\t0.950231292294\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = sps.csr_matrix(np.random.rand(2,5))\n",
+    "\n",
+    "#b = np.argsort(a)\n",
+    "print(a)\n",
+    "print(a[:,[False, False, True, False,True]])\n",
+    "a.eliminate_zeros()\n",
+    "print(a.nnz)\n",
+    "\n",
+    "print(a)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "a = sps.csr_matrix(np.random.rand(2,5))\n",
+    "\n",
+    "#b = np.argsort(a)\n",
+    "print(a)\n",
+    "print(a[:,[False, False, True, False,True]])\n",
+    "a.eliminate_zeros()\n",
+    "print(a.nnz)\n",
+    "\n",
+    "print(a)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 3]\n",
+      " [1 0 4]\n",
+      " [3 4 0]]\n",
+      "[[1 0 0]\n",
+      " [1 1 0]\n",
+      " [3 4 1]]\n",
+      "[[ 1.98835896  1.2368322   2.46297306  1.50006282  0.42468471]\n",
+      " [ 2.6899392   2.23099114  3.55329378  2.05039924  0.54943069]\n",
+      " [ 1.47584357  4.08301976  3.30406399  4.60444189  1.48118376]]\n",
+      "[[ 0.26537089  0.97144407  0.68534219  0.79256472  0.23845617]\n",
+      " [ 0.43530362  1.26361596  0.99735154  1.34925165  0.42990998]\n",
+      " [ 2.08198565  4.39790653  4.02105189  4.91890052  1.55892739]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[0,1,3],[1,0,4],[3,4,0]])\n",
+    "a_half = np.array([[1,0,0],[1,1,0],[3,4,1]])\n",
+    "b = np.random.rand(3,5)\n",
+    "print(a)\n",
+    "print(a_half)\n",
+    "print(a.dot(b))\n",
+    "print(a_half.dot(b))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +152,7 @@
        "(41756, 2)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
