Removed test/train split bug and alNone-bug. Rating improved.

--- a/Binary Item - Playlist Matrix.ipynb
+++ b/Binary Item - Playlist Matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "4      3836898   2945623"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,28 +103,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100000"
+       "32195"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tracks_final.shape[0]"
+    "target_tracks.shape[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "item_playlist_matrix = np.zeros([playlists_final.shape[0], tracks_final.shape[0]]) "
@@ -175,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#filtering all tracks occurring less than 10 times gives 23298 rows\n",
@@ -188,7 +192,9 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "item_playlist_matrix = np.zeros([playlists_final.shape[0], tracks_relevant.shape[0]]) "
@@ -335,7 +341,9 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Playlists with more than 5 songs: 17173\n",
