Content based rec syst now scoring 0.08

--- a/Content + Collaborative Recommender System.ipynb
+++ b/Content + Collaborative Recommender System.ipynb
@@ -421,6 +421,8 @@
     "content_counter += 1\n",
     "\"\"\"\n",
     "\n",
+    "\n",
+    "\n",
     "print(len(content_to_index))\n",
     "print(\"%s albums. 27607 expected.\" %albumcount)\n",
     "print(\"%s artists. 17537 expected.\" %artistcount)"
@@ -429,7 +431,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class cti(object): \n",
@@ -491,7 +495,8 @@
     "    playlist_to_index[playlist_id] = counter\n",
     "    playlist_to_id[counter] = playlist_id\n",
     "    counter += 1;\n",
-    "    \n",
+    "\n",
+    "\n",
     "print(\"We have {} playlists with {} unique tracks with {} unique content types. \".format(len(playlist_to_index), len(track_to_index), len(content_to_index)))"
    ]
   },
